@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020221103"
-#define public MagickPackageReleaseDate "snapshot-20221103"
+#define public MagickPackageVersionAddendum ".020221108"
+#define public MagickPackageReleaseDate "snapshot-20221108"
