@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x272400
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 27,24,0
-#define MagickChangeDate   "20221103"
-#define MagickReleaseDate  "snapshot-20221103"
+#define MagickChangeDate   "20221108"
+#define MagickReleaseDate  "snapshot-20221108"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
